[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Level1.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/FontLargeText.tres" type="DynamicFont" id=2]
[ext_resource path="res://res/animations/mob1/frame_4_delay-0.08s.png" type="Texture" id=3]
[ext_resource path="res://res/animations/mob1/frame_2_delay-0.08s.png" type="Texture" id=4]
[ext_resource path="res://res/animations/mob1/frame_5_delay-0.08s.png" type="Texture" id=5]
[ext_resource path="res://res/animations/mob1/frame_3_delay-0.08s.png" type="Texture" id=6]
[ext_resource path="res://res/animations/mob1/frame_0_delay-0.08s.png" type="Texture" id=7]
[ext_resource path="res://res/animations/mob1/frame_1_delay-0.08s.png" type="Texture" id=8]
[ext_resource path="res://res/fonts/FontPleasantText.tres" type="DynamicFont" id=9]
[ext_resource path="res://res/fonts/FontPleasantItalic.tres" type="DynamicFont" id=10]
[ext_resource path="res://res/fonts/FontPleasantBold.tres" type="DynamicFont" id=11]
[ext_resource path="res://res/sounds/chill.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Level1Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="."]
margin_left = 829.0
margin_top = 368.0
margin_right = 1066.0
margin_bottom = 513.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mob1" type="AnimatedSprite" parent="Button"]
position = Vector2( 121.103, 72.3171 )
scale = Vector2( 0.184798, 0.184798 )
frames = SubResource( 1 )
frame = 3
speed_scale = 2.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ContainerStats" type="HBoxContainer" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 109.317
margin_top = -194.501
margin_right = 387.317
margin_bottom = -110.501
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerHP" type="HBoxContainer" parent="HUD/ContainerStats"]
margin_right = 209.0
margin_bottom = 84.0
custom_constants/separation = 6

[node name="LabelHP" type="Label" parent="HUD/ContainerStats/ContainerHP"]
margin_top = 19.0
margin_right = 55.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "HP:"

[node name="LabelHPValue" type="Label" parent="HUD/ContainerStats/ContainerHP"]
margin_left = 61.0
margin_top = 19.0
margin_right = 61.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="HUD/ContainerStats/ContainerHP"]
margin_left = 67.0
margin_right = 96.0
margin_bottom = 84.0
custom_constants/separation = 29

[node name="LabelScore" type="Label" parent="HUD/ContainerStats/ContainerHP"]
margin_left = 102.0
margin_top = 19.0
margin_right = 203.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"

[node name="LabelScoreValue" type="Label" parent="HUD/ContainerStats/ContainerHP"]
margin_left = 209.0
margin_top = 19.0
margin_right = 209.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )

[node name="LabelMessage" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHelp" type="RichTextLabel" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.0
margin_top = -466.0
margin_right = 429.0
margin_bottom = -169.0
grow_horizontal = 2
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHintHK" type="Label" parent="HUD"]
margin_left = 1741.0
margin_top = 17.0
margin_right = 1909.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "H - help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
